--- a/easy_learning_app/package.json
+++ b/easy_learning_app/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,7 +15,10 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
     "expo": "54.0.23",
+    "expo-auth-session": "~7.0.8",
+    "expo-crypto": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-render-html": "^6.3.4",
