--- a/easy_learning_app/package.json
+++ b/easy_learning_app/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
     "expo": "54.0.23",
-    "expo-auth-session": "~7.0.8",
+    "expo-auth-session": "~7.0.9",
     "expo-crypto": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.15.0",
     "react-native-youtube-iframe": "^2.4.1"
   },
