--- a/easy_learning_app/app.json
+++ b/easy_learning_app/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "easy_learning_app",
     "slug": "easy_learning_app",
-    "scheme": "easy-learning-app", 
+    "scheme": "easylearningapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -14,7 +14,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.jaberakram.easylearningapp"
     },
     "android": {
       "adaptiveIcon": {
@@ -22,13 +23,17 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.easy_learning_app"
+      "package": "com.jaberakram.easylearningapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "@react-native-google-signin/google-signin"
+        
+      ]
     ]
   }
 }
