--- a/easy_learning_app/ios/EasyLearningApp.xcodeproj/xcshareddata/xcschemes/EasyLearningApp.xcscheme
+++ b/easy_learning_app/ios/EasyLearningApp.xcodeproj/xcshareddata/xcschemes/EasyLearningApp.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "EasyLearningApp.app"
-               BlueprintName = "EasyLearningApp"
-               ReferencedContainer = "container:EasyLearningApp.xcodeproj">
+               BuildableName = "easylearningapp.app"
+               BlueprintName = "easylearningapp"
+               ReferencedContainer = "container:easylearningapp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "EasyLearningAppTests.xctest"
-               BlueprintName = "EasyLearningAppTests"
-               ReferencedContainer = "container:EasyLearningApp.xcodeproj">
+               BuildableName = "easylearningappTests.xctest"
+               BlueprintName = "easylearningappTests"
+               ReferencedContainer = "container:easylearningapp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EasyLearningApp.app"
-            BlueprintName = "EasyLearningApp"
-            ReferencedContainer = "container:EasyLearningApp.xcodeproj">
+            BuildableName = "easylearningapp.app"
+            BlueprintName = "easylearningapp"
+            ReferencedContainer = "container:easylearningapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "EasyLearningApp.app"
-            BlueprintName = "EasyLearningApp"
-            ReferencedContainer = "container:EasyLearningApp.xcodeproj">
+            BuildableName = "easylearningapp.app"
+            BlueprintName = "easylearningapp"
+            ReferencedContainer = "container:easylearningapp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
